# AdvancedDB17CW1

./: ADBCoursework1.cpp  CMakeLists.txt  README.md  Yelp.hpp  explanation.txt  output.txt  yelp.hpp
TEMP/: ADBCoursework1-oRIGIN.cpp  Yelp-ORIGIN.hpp
